tests/error/06_runtime_out_of_bounds.mire
load kioto

pub fn main: () {
    set nums = [1 2 3] :arr[i64 3]
    set x = nums at 10
}